Updated Readme to include link for live version of game. Improved responsiveness of mobile landscape format: added max-width css property to game window class to prevent game buttons overlapping the control box, added vertical center align to game control box

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -49,6 +49,7 @@ h6 {
     width: 60vmin;
     height: 60vmin;
     margin: auto;
+    max-width: 100%;
 }
 
 .button-container {
